hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: hello
  selector:
    app: hello
